--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-midnight
-title: Amish Coding
-description: if you ask me how Amish people can code, I swear to God I'll build a barn at you
+title: 
+description: 
 markdown: kramdown
